@@ -2,6 +2,7 @@
 =====
 * Changed types to match new ocaml-ogg's API.
   Should be fully backward compatible.
+* Fix segfault when vendor string is empty.
 
 0.1.1 (25-06-2012)
 =====
